# VacuumSolver

./: .gitignore  README.md  init.sh  meson.build  pyproject.toml
test/: test.py
test/basefunction/: test_zernike.py
test/fortraninterface/basefunction/: test_zernike.py
test/fortraninterface/preset/: test_nDofs.py  test_resolution.py
test/fortraninterface/setresolution/: test_setresolution.py
vacuum/: .gitignore  __init__.py  axis.py  fortraninterface.py  vacuumProblem.py
vacuum/fortran/: a.out  basefunction.f90  main.f90  matrix.f90  preset.f90  test_add_numbers.f90
vacuum/test/: .gitignore
