[build-system]
requires = [
    "meson",
    "meson-python",
    "ninja",
    "numpy"
]
build-backend = "mesonpy"


[project]
name = "vacuum"
version = "0.0.0"
description = "A vacuum solver without the assumption of nested flux surface!"
readme = "README.md"
authors = [
    {name="Ke Liu", email="lk2020@mail.ustc.edu.cn"},
]
maintainers = [
    {name="Ke Liu", email="lk2020@mail.ustc.edu.cn"},
]
license = {text = "GNU 3.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "tfpy"
]